# python-coding-challenge

./: .gitignore  README.md  main.py  pyproject.toml
policy_db/: chroma.sqlite3
src/CQRS/: demo1.py  demo10.py  demo11.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
src/LLM/: company_policies.txt  demo1.py  demo10.py  demo12.py  demo13.py  demo14.py  demo15.py  demo16.py  demo17.py  demo18.py  demo19.py  demo2.py  demo20.py  demo21.py  demo22.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
src/big_o_notation_demos/: demo1.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo15.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
src/collections/: demo1.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo15.py  demo16.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
src/collections/defaultdict/: demo1.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo15.py  demo16.py  demo17.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
