[project]
name = "python-coding-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "python-dotenv>=1.1.1",
]

[tool.pylint.messages_control]
disable = ["missing-module-docstring"]
