[project]
name = "python-coding-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docarray>=0.41.0",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "python-dotenv>=1.1.1",
]

[tool.pylint.messages_control]
disable = ["missing-module-docstring"]
